Negative unit test
Added negative tests for unit testing